// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Patterns Overview renders 1`] = `
<section
  className="component-overview hide-arrow-icon"
>
  <Link
    className="cards cards-primary cards-wide"
    key="Forms"
    to="../forms"
  >
    <div
      className="cards-content flex-row align-items-center m-0 "
    >
      <i
        className="material-icons material-icons-outlined mr-3"
      >
        format_align_justify
      </i>
      <span
        className="h3 m-0"
      >
        Forms
      </span>
    </div>
    <i
      className="material-icons material-icons-outlined"
    >
      arrow_forward
    </i>
  </Link>
  <Link
    className="cards cards-primary cards-wide"
    key="Login"
    to="../login"
  >
    <div
      className="cards-content flex-row align-items-center m-0 "
    >
      <i
        className="material-icons material-icons-outlined mr-3"
      >
        account_circle
      </i>
      <span
        className="h3 m-0"
      >
        Login
      </span>
    </div>
    <i
      className="material-icons material-icons-outlined"
    >
      arrow_forward
    </i>
  </Link>
</section>
`;

exports[`Patterns renders 1`] = `
<div
  className="row"
>
  <div
    className="doc-body col-12"
    id="doc-body"
  >
    <p
      className="lead"
    >
      Patterns are best practice solutions for common product features built up by combinations of various components.
       
    </p>
    <section
      className="component-overview hide-arrow-icon"
    >
      <a
        className="cards cards-primary cards-wide"
        href="/forms"
        onClick={[Function]}
      >
        <div
          className="cards-content flex-row align-items-center m-0 "
        >
          <i
            className="material-icons material-icons-outlined mr-3"
          >
            format_align_justify
          </i>
          <span
            className="h3 m-0"
          >
            Forms
          </span>
        </div>
        <i
          className="material-icons material-icons-outlined"
        >
          arrow_forward
        </i>
      </a>
      <a
        className="cards cards-primary cards-wide"
        href="/login"
        onClick={[Function]}
      >
        <div
          className="cards-content flex-row align-items-center m-0 "
        >
          <i
            className="material-icons material-icons-outlined mr-3"
          >
            account_circle
          </i>
          <span
            className="h3 m-0"
          >
            Login
          </span>
        </div>
        <i
          className="material-icons material-icons-outlined"
        >
          arrow_forward
        </i>
      </a>
    </section>
  </div>
</div>
`;
